proba branca marc